Change to my mermaid

--- a/_posts/2025-04-04-test.md
+++ b/_posts/2025-04-04-test.md
@@ -116,11 +116,24 @@ This is a common code snippet, without syntax highlight and line number.
 ## Mermaid SVG
 
 ```mermaid
- gantt
-  title  Adding GANTT diagram functionality to mermaid
-  apple :a, 2017-07-20, 1w
-  banana :crit, b, 2017-07-23, 1d
-  cherry :active, c, after b a, 1d
+gantt
+    dateFormat  YYYY-MM-DD
+    title MassTransit V8/V9 Transition Timeline
+    axisFormat %Y-%m
+
+    section V8 Maintenance
+    V8 Security Patches    :active, v8sec, 2024-04-02, 2026-12-31
+    End Official V8 Maint. :crit, milestone, 2026-12-31, 1d
+
+    section V9 Development & Release
+    V9 Pre-Releases       :v9pre, 2025-07-01, 2025-12-31
+    V9 Official Release   :v9rel, 2026-01-01, 2026-03-31
+    V9 Ongoing Patches    :active, v9sec, 2026-01-01, 2028-12-31
+
+    %% Annotations based on text
+    %% Q3 2025: V9 Pre-releases start (July-Sept)
+    %% Q1 2026: V9 Official Release (Jan-Mar)
+    %% End of 2026: V8 Official Maintenance Ends (Dec 31)
 ```
 
 ## Video
